# vibe-lang

./: .gitignore  .similarity-rs.toml  ARCHITECTURE.md  CLAUDE.md  COMPLETED.md  Cargo.toml  EVALUATION.md  IMPLEMENTATION_PLAN.md  MODULE_DESIGN.md  Makefile  PERFORMANCE_ANALYSIS.md  PERFORMANCE_RESULTS.md  README.md  RECURSIVE_DESIGN.md  RUNTIME_ARCHITECTURE.md  TODO.md  build-test-codebase.xs  clippy.toml  debug-test2.vibe  debug_if_test.rs  debug_rec.xs  demo-list-patterns.xs  demo-records.xs  demo-unified-syntax.xs  refactoring_progress.md  test-all-features.xs  test-auto-recursion.xs  test-celsius-simple.xs  test-celsius-updated.xs  test-celsius.xs  test-concrete-types.xbin  test-concrete-types.xs  test-debug-namespace.xs  test-debug.vibe  test-definitions.xs  test-direct-calc.xs  test-effects.xs  test-explicit-import.md  test-final.xs  test-float-debug.xs  (+117 more)
cli/: Cargo.toml
cli/src/: component_commands.rs  main.rs
cli/tests/: integration_test.rs
codebase/: Cargo.toml
codebase/src/: lib.rs  test_cache.rs
codebase/ui/: app-example.xs  component.xs  diff.xs  events.xs  render.xs  state.xs  todo-app.xs  vdom.xs
shell/: Cargo.toml  demo_correct_hash.sh  demo_list_lib.sh  test_advanced.sh  test_improved_errors.sh  test_shell.sh  test_shell2.sh  test_simple.sh
shell/examples/: demo.xs
shell/src/: api.rs  commands.rs  lib.rs  main.rs
test_framework/: Cargo.toml
test_framework/src/: lib.rs
vibe-cli/: Cargo.toml
vibe-cli/src/: cli.rs  component_commands.rs  hole_completion.rs  incremental_bench.rs  lib.rs  multi_store.rs  package_commands.rs  search_patterns.rs  shell.rs  wasm_bench.rs
vibe-cli/tests/: collect_test_results.rs  in_source_test_integration.rs  search_patterns_test.rs  search_test.rs  shell_e2e_test.rs  shell_features_test.rs  shell_integration_test.rs
vibe-codebase/: Cargo.toml
vibe-codebase/src/: ast_command.rs  block_registry.rs  code_query.rs  code_repository.rs  codebase.rs  database.rs  dependency_extractor.rs  differential_test_runner.rs  hash.rs  incremental_type_checker.rs  lib.rs  namespace.rs  pipeline.rs  query_engine.rs  shell_syntax.rs  structured_data.rs  test_cache.rs  test_generator.rs  test_runner.rs  unified_parser.rs  vbin_tests.rs  wasm_queries_simple.rs
vibe-codebase/tests/: dead_code_detection_test.rs  type_dependency_tests.rs
vibe-language/: Cargo.toml  test_with_debug.rs
vibe-language/src/: ast_normalizer.rs  block_attributes.rs  builtin_modules.rs  content_hash.rs  curry.rs  effect_inference.rs  effect_inference_tests.rs  effect_normalizer.rs  effect_system_tests.rs  error_context.rs  extensible_effects.rs  ir.rs  ir_pipeline.rs  koka_effects.rs  lib.rs  metadata.rs  normalized_ast.rs  optimized_ir.rs  pretty_print.rs  simple_effect_tests.rs  type_annotator.rs  type_tests.rs  typed_ir.rs  types.rs  value.rs
vibe-language/tests/: experimental_gll_tests.rs  test_binary_operators.rs  test_gll_parser_multi_statements.rs  test_gll_with_handler.rs  test_match_parsing.rs
vibe-lsp/: Cargo.toml
vibe-lsp/src/: backend.rs  main.rs  source_map.rs  text_document.rs
vibe-mcp/: Cargo.toml  README.md
vibe-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs  tools.rs
vibe-package/: Cargo.toml
vibe-package/src/: cache.rs  hash.rs  manifest.rs  registry.rs  resolver.rs  utils.rs
vibe-runtime/: Cargo.toml
vibe-runtime/src/: backend.rs  effect_runtime.rs  lib.rs
vibe-test/: Cargo.toml  test_int_add.xs
vibe-test/benches/: DISABLED_performance_benchmark.rs  parser_performance.rs  type_checker_bench.rs
vibe-test/tests/: builtin_namespace_tests.rs  component_build_tests.rs  content_addressed_tests.rs  currying_tests.rs  effect_basic_tests.rs  effect_polymorphism_test.rs  effect_polymorphism_tests.rs  effect_system_tests.rs  feature_tests.rs  hash_reference_tests.rs  import_hash_tests.rs  let_in_tests.rs  new_syntax_tests.rs  print_tests.rs  pure_functional_tests.rs  recursion_tests.rs  simple_effect_test.rs  stdlib_tests.rs  string_operations_tests.rs  type_embedding_tests.rs  wit_validation_tests.rs
vibe-wasm/: Cargo.toml
vibe-wasm/src/: lib.rs  manifest.rs  runner.rs  test_runner.rs  wasi_error.rs  wasi_lib.rs
vpm/: Cargo.toml
vpm/src/: main.rs
vsh/: Cargo.toml
vsh/.xs-codebase/: code_repository.db
vsh/src/: api.rs  cli.rs  commands.rs  component_commands.rs  hole_completion.rs  incremental_bench.rs  lib.rs  multi_store.rs  search_patterns.rs  shell.rs
vsh/test/: code_repository.db
vsh/tests/: collect_test_results.rs  search_patterns_test.rs  search_test.rs  shell_e2e_test.rs  shell_features_test.rs  shell_integration_test.rs
wasi_sandbox/: Cargo.toml
wasi_sandbox/src/: error.rs  lib.rs  manifest.rs  permissions.rs  sandbox.rs
wasi_sandbox/tests/: integration_test.rs
wasm_backend/: Cargo.toml
wasm_backend/src/: codegen.rs  component.rs  component_builder.rs  emit.rs  lib.rs  runner.rs  test_runner.rs  test_runner_tests.rs  types.rs  wit_generator.rs
wasm_backend/tests/: builtin_test.rs  execution_test.rs  integration_test.rs
xs-lang/: CLAUDE.md  Cargo.toml  README.md
xs-lang/checker/: Cargo.toml
xs-lang/examples/: arithmetic.xs  list.xs
xs-lang/xs_core/: Cargo.toml
xs-runtime/: Cargo.toml
xs-runtime/src/: backend.rs  effect_runtime.rs  lib.rs  runtime_with_permissions.rs
xs-test/: Cargo.toml
xs-test/benches/: type_checker_bench.rs
xs-test/src/: lib.rs
xs-test/tests/: codebase_tests.rs  currying_tests.rs  effect_polymorphism_test.rs  effect_type_check_tests.rs  print_tests.rs  pure_functional_tests.rs  stdlib_tests.rs  string_operations_tests.rs  type_embedding_tests.rs
xs-tools/: Cargo.toml
xs-tools/.xs-codebase/: code_repository.db
xs-tools/src/: api.rs  cli.rs  commands.rs  component_commands.rs  lib.rs  multi_store.rs  permission_cli.rs  shell.rs
xs-tools/tests/: collect_test_results.rs  shell_e2e_test.rs  shell_integration_test.rs
xs-wasm/: Cargo.toml
xs-wasm/src/: codegen.rs  component.rs  component_builder.rs  lib.rs  sandbox.rs  test_runner.rs  types.rs  wit_generator.rs
xs-workspace/: Cargo.toml
xs-workspace/src/: codebase.rs  (+21 more)
xsh/: Cargo.toml
(+753 files in other folders)
