[workspace]
members = [
    "vibe-core",
    "vibe-compiler",
    "vibe-runtime",
    "vibe-workspace",
    "vsh",
]
resolver = "2"
default-members = ["vsh"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XS Language Contributors"]

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = "4.5"
colored = "2.1"
criterion = "0.5"
wasmtime = "27.0"
wasmtime-wasi = "27.0"
wat = "1.219"
ordered-float = { version = "4.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
sha2 = "0.10"
im = "15.1"
hex = "0.4"
salsa = "0.16"
lazy_static = "1.5"

