[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xsc"
path = "src/main.rs"

[dependencies]
xs_core.workspace = true
parser.workspace = true
checker.workspace = true
interpreter.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
test_framework = { path = "../test_framework" }
wasm_backend = { path = "../wasm_backend" }
