[package]
name = "codebase"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs_core = { path = "../xs_core" }
checker = { path = "../checker" }
parser = { path = "../parser" }
serde.workspace = true
bincode.workspace = true
sha2.workspace = true
thiserror.workspace = true
im.workspace = true
hex = "0.4"
