[package]
name = "shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs_core = { path = "../xs_core" }
parser = { path = "../parser" }
checker = { path = "../checker" }
interpreter = { path = "../interpreter" }
codebase = { path = "../codebase" }
runtime = { path = "../runtime" }
rustyline = "10.0"
colored = "2.0"
anyhow = "1.0"

[[bin]]
name = "xs-shell"
path = "src/main.rs"
