[package]
name = "shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs_core = { path = "../xs_core" }
parser = { path = "../parser" }
checker = { path = "../checker" }
interpreter = { path = "../interpreter" }
codebase = { path = "../codebase" }
runtime = { path = "../runtime" }
xs_salsa = { path = "../xs_salsa" }
rustyline = "10.0"
colored = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "xs-shell"
path = "src/main.rs"

[[bin]]
name = "xs-api"
path = "src/bin/xs-api.rs"
