[package]
name = "test_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
xs_core = { path = "../xs_core" }
parser = { path = "../parser" }
checker = { path = "../checker" }
interpreter = { path = "../interpreter" }
codebase = { path = "../codebase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2"