[package]
name = "vibe-codebase"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vibe-language = { path = "../vibe-language" }
vibe-compiler = { path = "../vibe-compiler" }
vibe-runtime = { path = "../vibe-runtime" }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
im.workspace = true
hex.workspace = true
salsa = "0.17.0-pre.2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
flate2 = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.8"
wat.workspace = true
tokio.workspace = true
reqwest.workspace = true
dirs.workspace = true
walkdir = "2.4"