[package]
name = "vibe-language"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ordered-float.workspace = true
lazy_static.workspace = true
sha2.workspace = true
blake3 = "1.5"
bincode = "1.3"
log = "0.4"