[package]
name = "vibe-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vibe-core = { path = "../vibe-core" }
vibe-compiler = { path = "../vibe-compiler" }
vibe-workspace = { path = "../vibe-workspace" }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
ropey = "1.6"
sourcemap = "8.0"
anyhow = "1.0"

[[bin]]
name = "vibe-lsp"
path = "src/main.rs"