[package]
name = "vibe-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
vibe-core = { path = "../vibe-core" }
vibe-compiler = { path = "../vibe-compiler" }
vibe-workspace = { path = "../vibe-workspace" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]