[package]
name = "vibe-package"
version = "0.1.0"
edition = "2021"

[dependencies]
vibe-core = { path = "../vibe-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
dirs = { workspace = true }
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }