[package]
name = "vibe-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vibe-language = { path = "../vibe-language" }
vibe-compiler = { path = "../vibe-compiler" }
thiserror.workspace = true
ordered-float.workspace = true

# For WebAssembly runtime support
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi"]