[package]
name = "vibe-test"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vibe-core = { path = "../vibe-core" }
# parser merged into vibe-core
vibe-compiler = { path = "../vibe-compiler" }
vibe-runtime = { path = "../vibe-runtime" }
vibe-workspace = { path = "../vibe-workspace" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
colored.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.8"

[[bench]]
name = "type_checker_bench"
harness = false

[[bench]]
name = "parser_performance"
harness = false