[package]
name = "vpm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpm"
path = "src/main.rs"

[dependencies]
vibe-package = { path = "../vibe-package" }
vibe-core = { path = "../vibe-core" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
colored = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }