[package]
name = "vsh"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
vibe-core = { path = "../vibe-core" }
vibe-compiler = { path = "../vibe-compiler" }
vibe-runtime = { path = "../vibe-runtime" }
vibe-wasm = { path = "../vibe-wasm" }
vibe-workspace = { path = "../vibe-workspace" }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
anyhow.workspace = true

# Shell dependencies
rustyline = "10.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# File walking
walkdir = "2.3"

# Hex encoding/decoding
hex = "0.4"

# Testing utilities (also needed for binaries)
tempfile = "3.8"

# LSP dependencies
tower-lsp = "0.20"
dashmap = "5.5"
ropey = "1.6"
sourcemap = "8.0"

# MCP Server dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror.workspace = true

[[bin]]
name = "vsh"
path = "src/bin/vsh.rs"

[[bin]]
name = "vibe-api"
path = "src/bin/vibe-api.rs"

[[bin]]
name = "collect-test-snapshots"
path = "src/bin/collect_test_snapshots.rs"

[dev-dependencies]