[package]
name = "wasi_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
xs_core = { path = "../xs_core" }
wasmtime = "15.0"
wasmtime-wasi = "15.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"