[package]
name = "wasm_backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs_core = { path = "../xs_core" }
parser = { path = "../parser" }
checker = { path = "../checker" }
perceus = { path = "../perceus" }
thiserror.workspace = true
wat.workspace = true
wasmtime.workspace = true
ordered-float.workspace = true
