[workspace]
members = [
    "xs_core",
    "parser",
    "checker",
    "interpreter",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XS Language Contributors"]

[workspace.dependencies]
xs_core = { path = "xs_core" }
parser = { path = "parser" }
checker = { path = "checker" }
interpreter = { path = "interpreter" }
thiserror = "1.0"
anyhow = "1.0"
clap = "4.5"
colored = "2.1"
