[package]
name = "xs-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs-core = { path = "../xs-core" }
xs-compiler = { path = "../xs-compiler" }
thiserror.workspace = true
ordered-float.workspace = true

# For WebAssembly runtime support
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi"]