[package]
name = "xs-test"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs-core = { path = "../xs-core" }
# parser merged into xs-core
xs-compiler = { path = "../xs-compiler" }
xs-runtime = { path = "../xs-runtime" }
xs-workspace = { path = "../xs-workspace" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
colored.workspace = true