[package]
name = "xs-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs-core = { path = "../xs-core" }
xs-compiler = { path = "../xs-compiler" }
xs-runtime = { path = "../xs-runtime" }
xs-wasm = { path = "../xs-wasm" }
xs-workspace = { path = "../xs-workspace" }
xs-test = { path = "../xs-test" }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
anyhow.workspace = true

# Shell dependencies
rustyline = "10.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "xsc"
path = "src/bin/xsc.rs"

[[bin]]
name = "xs-shell"
path = "src/bin/xs-shell.rs"

[[bin]]
name = "xs-api"
path = "src/bin/xs-api.rs"