[package]
name = "xs-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs-core = { path = "../xs-core" }
xs-compiler = { path = "../xs-compiler" }
xs-runtime = { path = "../xs-runtime" }
thiserror.workspace = true
wat.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
ordered-float.workspace = true
wasm-encoder = "0.219"
wit-parser = "0.219"
wit-component = "0.219"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3.8"