[package]
name = "xsh"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
xs-core = { path = "../xs-core" }
xs-compiler = { path = "../xs-compiler" }
xs-runtime = { path = "../xs-runtime" }
xs-wasm = { path = "../xs-wasm" }
xs-workspace = { path = "../xs-workspace" }
xs-test = { path = "../xs-test" }

# CLI dependencies
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
anyhow.workspace = true

# Shell dependencies
rustyline = "10.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# File walking
walkdir = "2.3"

# Testing utilities (also needed for binaries)
tempfile = "3.8"

[[bin]]
name = "xsh"
path = "src/bin/xsh.rs"

[[bin]]
name = "xs-api"
path = "src/bin/xs-api.rs"

[[bin]]
name = "collect-test-snapshots"
path = "src/bin/collect_test_snapshots.rs"

[dev-dependencies]